images/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: btc
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/btc"
                          route:
                            cluster: service-bitcoin-blockbook
  clusters:
    - name: service-bitcoin-blockbook
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: service-bitcoin-blockbook
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: bitcoin-blockbook
                      port_value: 8000
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10000
